--- a/index.html
+++ b/index.html
@@ -182,6 +182,19 @@
         font-size: 10px;
         color: #999;
       }
+      .points-exceeded {
+        background-color: #f8d7da !important;
+        border-color: #dc3545 !important;
+        color: #721c24 !important;
+      }
+      .attribute-exceeded {
+        background-color: #f8d7da !important;
+        border-color: #dc3545 !important;
+      }
+      .skill-exceeded {
+        background-color: #fff3cd !important;
+        border-color: #ffc107 !important;
+      }
     </style>
   </head>
   <body class="bg-light">
@@ -303,23 +316,39 @@
               <div class="row text-center">
                 <div class="col-md-4">
                   <div class="point-category">
+                    <div class="point-label">Nível Atual</div>
+                    <div
+                      class="point-value"
+                      id="character-level"
+                      contenteditable="true"
+                      style="cursor: text"
+                      onclick="editLevel(this)"
+                      onblur="saveLevel(this)"
+                      onkeypress="handleLevelKeypress(event, this)"
+                    >
+                      0
+                    </div>
+                    <div class="point-cost">nível</div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="point-category">
                     <div class="point-label">Perícias Primárias</div>
                     <div class="point-value" id="attribute-points">0</div>
-                    <div class="point-cost">1 pt/nível</div>
+                    <div class="point-cost">
+                      <span id="attribute-used">0</span> /
+                      <span id="attribute-available">5</span> disponíveis
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="point-category">
                     <div class="point-label">Perícias Secundárias</div>
                     <div class="point-value" id="skill-points">0</div>
-                    <div class="point-cost">1/2/4 pts</div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="point-category total-points">
-                    <div class="point-label">TOTAL</div>
-                    <div class="point-value" id="total-points">0</div>
-                    <div class="point-cost">pontos</div>
+                    <div class="point-cost">
+                      <span id="skill-used">0</span> /
+                      <span id="skill-available">10</span> disponíveis
+                    </div>
                   </div>
                 </div>
               </div>
@@ -789,6 +818,129 @@
         console.log(result);
       }
 
+      // Level editing functions
+      function editLevel(element) {
+        element.focus();
+        // Select all text when clicking to edit
+        if (window.getSelection && document.createRange) {
+          const range = document.createRange();
+          range.selectNodeContents(element);
+          const selection = window.getSelection();
+          selection.removeAllRanges();
+          selection.addRange(range);
+        }
+      }
+
+      function saveLevel(element) {
+        let level = parseInt(element.textContent) || 0;
+        if (level < 0) level = 0;
+        if (level > 20) level = 20; // Set a reasonable max level
+        element.textContent = level;
+
+        // Update available points when level changes
+        updateMaxPointsOnLevelUp();
+
+        // Trigger auto-save
+        clearTimeout(window.saveTimeout);
+        window.saveTimeout = setTimeout(() => {
+          saveCharacterDataToStorage();
+        }, 500);
+      }
+      function handleLevelKeypress(event, element) {
+        // Allow only numbers and enter key
+        if (event.key === "Enter") {
+          element.blur();
+          return false;
+        }
+
+        // Allow only digits, backspace, delete, arrow keys
+        if (
+          !/[\d]/.test(event.key) &&
+          !["Backspace", "Delete", "ArrowLeft", "ArrowRight"].includes(
+            event.key
+          )
+        ) {
+          event.preventDefault();
+          return false;
+        }
+      }
+
+      // Function to update available points when leveling up
+      function updateMaxPointsOnLevelUp() {
+        // Currently empty as requested
+        // This function will be used to calculate available points based on level progression
+
+        // For now, calculate basic available points
+        calculateAvailablePoints();
+      }
+
+      // Configuration for level progression
+      const levelProgressionConfig = {
+        // Skill points gained at each level (cumulative) - array index = level
+        skillPointsPerLevel: [
+          10, // Level 0: Starting skill points
+          4, // Level 1: +4 skill points when reaching level 1
+          6, // Level 2: +6 skill points when reaching level 2
+          8, // Level 3: +8 skill points when reaching level 3
+          8, // Level 4: +8 skill points when reaching level 4
+          8, // Level 5: +8 skill points when reaching level 5
+          10, // Level 6: +10 skill points when reaching level 6
+          12, // Level 7: +12 skill points when reaching level 7
+          14, // Level 8: +14 skill points when reaching level 8
+          14, // Level 9: +14 skill points when reaching level 9
+          16, // Level 10: +16 skill points when reaching level 10
+          16, // Level 11: +16 skill points when reaching level 11
+          14, // Level 12: +14 skill points when reaching level 12
+          14, // Level 13: +14 skill points when reaching level 13
+          12, // Level 14: +12 skill points when reaching level 14
+          10, // Level 15: +10 skill points when reaching level 15
+          8, // Level 16: +8 skill points when reaching level 16
+          8, // Level 17: +8 skill points when reaching level 17
+          8, // Level 18: +8 skill points when reaching level 18
+          6, // Level 19: +6 skill points when reaching level 19
+          4, // Level 20: +4 skill points when reaching level 20
+        ],
+        // Attribute points: base 5 + 1 for every even level
+        attributePointsBase: 5,
+        attributePointsPerEvenLevel: 1,
+      };
+
+      // Function to calculate available points based on character level
+      function calculateAvailablePoints() {
+        const level =
+          parseInt(document.getElementById("character-level").textContent) || 0;
+
+        // Calculate attribute points: base + bonus for even levels
+        const evenLevelBonus =
+          Math.floor(level / 2) *
+          levelProgressionConfig.attributePointsPerEvenLevel;
+        const availableAttributePoints =
+          levelProgressionConfig.attributePointsBase + evenLevelBonus;
+
+        // Calculate cumulative skill points
+        let availableSkillPoints = 0;
+
+        // Sum up skill points from level 0 to current level
+        for (let i = 0; i <= level; i++) {
+          if (i < levelProgressionConfig.skillPointsPerLevel.length) {
+            availableSkillPoints +=
+              levelProgressionConfig.skillPointsPerLevel[i];
+          }
+          // If level goes beyond array size, ignore (no additional points)
+        }
+
+        // Update the display
+        document.getElementById("attribute-available").textContent =
+          availableAttributePoints;
+        document.getElementById("skill-available").textContent =
+          availableSkillPoints;
+
+        return {
+          attributes: availableAttributePoints,
+          skills: availableSkillPoints,
+        };
+      }
+
       // Event handler for section clicks
       function handleSectionClick(sectionId) {
         console.log(`Section clicked: ${sectionId}`);
@@ -881,6 +1033,9 @@
           description: document.querySelector(
             'textarea[placeholder="Descrição do personagem..."]'
           ).value,
+          level:
+            parseInt(document.getElementById("character-level").textContent) ||
+            0,
           attributes: {
             con:
               document.querySelector('input[data-attribute="con"]')?.value || 0,
@@ -962,6 +1117,11 @@
           document.querySelector(
             'textarea[placeholder="Descrição do personagem..."]'
           ).value = data.description;
+        }
+
+        // Load character level
+        if (data.level !== undefined) {
+          document.getElementById("character-level").textContent = data.level;
         }
 
         // Load attributes
@@ -1055,6 +1215,8 @@
           }
         });
 
+        // Update available points first, then calculate totals
+        calculateAvailablePoints();
         validateAttributeAndSkills();
         calculateTotalPoints();
       }
@@ -1164,6 +1326,9 @@
 
         // Initial point calculation
         calculateTotalPoints();
+
+        // Calculate available points
+        calculateAvailablePoints();
 
         // Load any saved character data
         const hasLoadedData = loadCharacterDataFromStorage();
@@ -1497,18 +1662,92 @@
           skillPoints += calculateSkillCost(maxLevel);
         });
 
+        // Get available points
+        const availableAttributePoints =
+          parseInt(
+            document.getElementById("attribute-available").textContent
+          ) || 5;
+        const availableSkillPoints =
+          parseInt(document.getElementById("skill-available").textContent) ||
+          10;
+
         // Update the display
         document.getElementById("attribute-points").textContent =
           attributePoints;
         document.getElementById("skill-points").textContent = skillPoints;
-        document.getElementById("total-points").textContent =
-          attributePoints + skillPoints;
+
+        // Update used points display
+        document.getElementById("attribute-used").textContent = attributePoints;
+        document.getElementById("skill-used").textContent = skillPoints;
+
+        // Apply warning colors if points are exceeded
+        checkAndApplyWarningColors(
+          attributePoints,
+          skillPoints,
+          availableAttributePoints,
+          availableSkillPoints
+        );
 
         return {
           attributes: attributePoints,
           skills: skillPoints,
-          total: attributePoints + skillPoints,
         };
+      }
+
+      // Function to check and apply warning colors when points are exceeded
+      function checkAndApplyWarningColors(
+        usedAttributePoints,
+        usedSkillPoints,
+        availableAttributePoints,
+        availableSkillPoints
+      ) {
+        // Check attribute points
+        const attributeExceeded =
+          usedAttributePoints > availableAttributePoints;
+        const skillExceeded = usedSkillPoints > availableSkillPoints;
+
+        // Update point category colors
+        const attributeCategory = document
+          .querySelector("#attribute-points")
+          .closest(".point-category");
+        const skillCategory = document
+          .querySelector("#skill-points")
+          .closest(".point-category");
+
+        if (attributeExceeded) {
+          attributeCategory.classList.add("points-exceeded");
+        } else {
+          attributeCategory.classList.remove("points-exceeded");
+        }
+
+        if (skillExceeded) {
+          skillCategory.classList.add("points-exceeded");
+        } else {
+          skillCategory.classList.remove("points-exceeded");
+        }
+
+        // Apply colors to individual attribute inputs
+        document.querySelectorAll("input[data-attribute]").forEach((input) => {
+          if (attributeExceeded) {
+            input.classList.add("attribute-exceeded");
+          } else {
+            input.classList.remove("attribute-exceeded");
+          }
+        });
+
+        // Apply colors to individual skill containers
+        document.querySelectorAll(".skill-levels").forEach((skillContainer) => {
+          const sectionId = skillContainer.dataset.section;
+
+          // Skip recursos section
+          if (sectionId === "recursos") return;
+
+          if (skillExceeded) {
+            skillContainer.classList.add("skill-exceeded");
+          } else {
+            skillContainer.classList.remove("skill-exceeded");
+          }
+        });
       }
       function toggleAllSectionsPreview() {
         const previewDiv = document.getElementById("all-sections-preview");
