--- a/index.html
+++ b/index.html
@@ -1621,9 +1621,9 @@
           case 1:
             return 1;
           case 2:
-            return 2;
+            return 1 + 2;
           case 3:
-            return 4;
+            return 1 + 2 + 4;
           default:
             return 0;
         }
