--- a/index.html
+++ b/index.html
@@ -3089,7 +3089,7 @@
               id: "target",
               title: "Alvo",
               description: "Alvos da magia",
-              required: false,
+              required: true,
               options: [
                 { id: "1_target", name: "1 alvo", costModifier: 1.0 },
                 { id: "3_targets", name: "Até 3 alvos", costModifier: 1.3 },
@@ -3106,7 +3106,7 @@
               id: "distance",
               title: "Distância",
               description: "Distância da magia",
-              required: false,
+              required: true,
               options: [
                 { id: "self_touch", name: "Self/Toque", costModifier: 1.0 },
                 { id: "5_meters", name: "Até 5 metros", costModifier: 1.1 },
@@ -3122,7 +3122,7 @@
               id: "area",
               title: "Área",
               description: "Área de efeito da magia",
-              required: false,
+              required: true,
               options: [
                 { id: "point", name: "Pontual", costModifier: 1.0 },
                 {
@@ -3215,7 +3215,7 @@
               id: "areaType",
               title: "Tipo de Área",
               description: "Tipo de área da magia",
-              required: false,
+              required: true,
               options: [
                 { id: "grupal", name: "Grupal", costModifier: 1.0 },
                 { id: "seletivo", name: "Seletivo", costModifier: 4.0 },
@@ -3349,11 +3349,19 @@
                       id="${selectId}" 
                       data-field-id="${field.id}"
                       title="${field.description}">
-                <option value="">-- Selecione ${field.title} --</option>
+                ${
+                  field.required
+                    ? ""
+                    : '<option value="">-- Selecione ' +
+                      field.title +
+                      " --</option>"
+                }
                 ${field.options
                   .map(
-                    (option) =>
-                      `<option value="${option.id}" title="Custo: ×${option.costModifier}">
+                    (option, index) =>
+                      `<option value="${option.id}" title="Custo: ×${
+                        option.costModifier
+                      }" ${field.required && index === 0 ? "selected" : ""}>
                     ${option.name} (×${option.costModifier})
                    </option>`
                   )
